added empty selectable under weights in product

--- a/app/src/main/res/layout/layout_product_major.xml
+++ b/app/src/main/res/layout/layout_product_major.xml
@@ -2,6 +2,7 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="205dp"
     android:layout_marginStart="@dimen/dimen_10dp"
@@ -116,7 +117,8 @@
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
                                 android:layout_centerVertical="true"
-                                app:srcCompat="@drawable/ic_star_rate" />
+                                app:srcCompat="@drawable/ic_star_rate"
+                                tools:ignore="VectorDrawableCompat" />
 
                             <ImageView
                                 android:id="@+id/second_star"
