retrieved wallet solid icon on dashborad

--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -434,7 +434,7 @@
                                         android:paddingRight="@dimen/dimen_20dp"
                                         android:paddingBottom="@dimen/dimen_20dp"
                                         android:layout_gravity="center"
-                                        android:src="@drawable/ic_wallet" />
+                                        android:src="@drawable/ic_wallet_solid" />
 
                                     <TextView
                                         android:id="@+id/tv_litar"
