--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -11,90 +11,168 @@
     <LinearLayout
         android:id="@+id/cart_view_empty"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize"
         android:orientation="vertical"
         android:padding="20dp">
 
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            app:srcCompat="@drawable/ic_shopping_cart_18dp"
-            app:tint="@color/grey_dark" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/empty_cart"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:src="@drawable/empty_cart_image"
+                app:layout_constraintBottom_toTopOf="@+id/guideline43"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/empty_cart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/continue_shopping"
-            android:textColor="@color/textColorSecondaryLight"
-            android:textSize="18sp" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:gravity="center"
+                android:padding="@dimen/dimen_20dp"
+                android:text="@string/empty_cart"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textStyle="bold"
+                app:autoSizeTextType="uniform"
+                app:layout_constraintBottom_toTopOf="@+id/guideline44"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline43" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/continue_shopping_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="@dimen/button_margin"
-            android:background="@drawable/rounded_corners_button_green"
-            android:text="@string/explore"
-            android:textColor="@color/white"
-            android:textSize="@dimen/button_text_size"
-            app:backgroundTint="@color/colorAccentGreen" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:gravity="center"
+                android:padding="@dimen/dimen_10dp"
+                android:text="Look like you haven't added anything to your cart yet"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textStyle="normal"
+                app:autoSizeTextType="uniform"
+                app:layout_constraintBottom_toTopOf="@+id/guideline45"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline44" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dimen_10dp"
+                android:background="@drawable/rounded_corners_button"
+                app:layout_constraintBottom_toTopOf="@+id/guideline46"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline45"
+                app:layout_constraintVertical_bias="0.75">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/continue_shopping_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:text="Start Shopping"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/button_text_size"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="30dip"
+                    android:layout_height="30dip"
+                    android:layout_gravity="end|center_vertical"
+                    android:layout_margin="10dip"
+                    android:background="@drawable/rounded_cornor_bg_light"
+                    app:srcCompat="@drawable/ic_chevron_right"
+                    app:tint="#FF6969" />
+            </FrameLayout>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline43"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.53" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline44"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.66" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline45"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.77" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline46"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.95" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/cart_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize"
         android:orientation="vertical"
-        android:layout_marginTop="?actionBarSize">
+        android:visibility="gone">
+
         <LinearLayout
             android:id="@+id/location_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_margin="@dimen/dimen_10dp"
             android:background="@drawable/round_rectangle_bg_light_gray"
+            android:orientation="horizontal"
             android:padding="@dimen/dimen_10dp">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_10dp"
-                app:srcCompat="@drawable/ic_pin"
-                android:layout_marginLeft="@dimen/dimen_10dp" />
+                android:layout_marginLeft="@dimen/dimen_10dp"
+                app:srcCompat="@drawable/ic_pin" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_marginStart="@dimen/dimen_20dp"
-                android:layout_marginLeft="@dimen/dimen_20dp">
+                android:layout_marginLeft="@dimen/dimen_20dp"
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/default_delivery_location1_tv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginBottom="@dimen/dimen_5dp"
                     android:text="Deliver at : Home"
                     android:textColor="#222"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="@dimen/dimen_5dp"/>
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/default_delivery_location2_tv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="Nakibinge Rd, Kampala, Uganda"
                     android:textColor="#222"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
             </LinearLayout>
 
 
@@ -122,44 +200,45 @@
                     android:id="@+id/btn_clear_cart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dimen_10dp"
                     android:background="@drawable/round_button_red"
+                    android:drawableEnd="@drawable/ic_right_chevron"
+                    android:padding="@dimen/dimen_8dp"
                     android:text="clear cart"
-                    android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textSize="@dimen/button_text_size"
-                    android:padding="@dimen/dimen_8dp"
-                    android:layout_margin="@dimen/dimen_10dp"
-                    android:drawableEnd="@drawable/ic_right_chevron"/>
+                    android:textStyle="bold" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/dimen_5dp"
+                    android:layout_margin="@dimen/dimen_10dp"
                     android:background="#222222"
-                    android:layout_margin="@dimen/dimen_10dp">
+                    android:padding="@dimen/dimen_5dp">
+
                     <TextView
                         android:id="@+id/promo_text"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:text="Add items worth UGX 550.00 \n \n more for FREE delivery"
                         android:layout_margin="8dp"
+                        android:text="Add items worth UGX 550.00 \n \n more for FREE delivery"
                         android:textColor="@color/white"
-                        android:textSize="17sp"/>
+                        android:textSize="17sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
                         android:id="@+id/promo_image"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end"
                         android:layout_margin="15dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/ic_shipping_car" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -167,50 +246,51 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
+                    android:background="@drawable/topcornerscurved"
                     android:elevation="@dimen/dimen_10dp"
-                    android:background="@drawable/topcornerscurved">
+                    android:padding="10dp">
+
                     <LinearLayout
                         android:id="@+id/layout_total_payment"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_margin="8dp">
+                        android:layout_margin="8dp"
+                        android:orientation="vertical">
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/dimen_5dp"
                             android:text="Total Payment"
                             android:textColor="#515C6F"
-                            android:textStyle="bold"
                             android:textSize="16sp"
-                            android:layout_marginBottom="@dimen/dimen_5dp"/>
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/cart_item_total_price"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="UGX 00.0"
-                            android:textStyle="bold"
+                            android:textColor="@color/colorAccentGreen"
                             android:textSize="20sp"
-                            android:textColor="@color/colorAccentGreen"/>
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
                     <Button
                         android:id="@+id/cart_checkout_btn"
-                        android:layout_height="wrap_content"
                         android:layout_width="match_parent"
-                        android:layout_weight="1"
-                        android:padding="8dp"
+                        android:layout_height="wrap_content"
                         android:layout_margin="8dp"
-                        android:drawableEnd="@drawable/ic_right_chevron"
+                        android:layout_weight="1"
                         android:background="@drawable/round_button_dark_green"
+                        android:drawableEnd="@drawable/ic_right_chevron"
+                        android:padding="8dp"
                         android:text="Checkout"
                         android:textAllCaps="true"
                         android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:textSize="@dimen/button_text_size" />
-
+                        android:textSize="@dimen/button_text_size"
+                        android:textStyle="bold" />
 
 
                 </LinearLayout>
@@ -221,52 +301,46 @@
         </androidx.core.widget.NestedScrollView>
 
 
+        <!--<LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
 
+            <LinearLayout
+                android:layout_weight=".5"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:background="@color/colorAccent"
+                android:padding="5dp" >
 
-
-
-
-            <!--<LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <LinearLayout
-                    android:layout_weight=".5"
-                    android:layout_width="0dip"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:background="@color/colorAccent"
-                    android:padding="5dp" >
-
-                    <TextView
-                        android:id="@+id/cart_total_price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Total $0.00"
-                        android:textColor="@color/white"
-                        android:textSize="18sp"
-                        android:textAlignment="textStart"
-                        android:gravity="start"
-                        android:padding="5dp" />
-
-                </LinearLayout>
-
-                <Button
-                    android:id="@+id/cart_checkout_btn"
-                    android:layout_weight=".5"
-                    android:layout_width="0dip"
-                    android:layout_height="match_parent"
-                    android:text="@string/checkoutFinal"
-                    android:textAllCaps="false"
-                    android:textSize="18sp"
+                <TextView
+                    android:id="@+id/cart_total_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total $0.00"
                     android:textColor="@color/white"
-                    android:textAlignment="center"
-                    android:background="@color/colorPrimary" />
+                    android:textSize="18sp"
+                    android:textAlignment="textStart"
+                    android:gravity="start"
+                    android:padding="5dp" />
 
-            </LinearLayout>-->
+            </LinearLayout>
 
+            <Button
+                android:id="@+id/cart_checkout_btn"
+                android:layout_weight=".5"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:text="@string/checkoutFinal"
+                android:textAllCaps="false"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:background="@color/colorPrimary" />
+
+        </LinearLayout>-->
 
 
     </LinearLayout>
