--- a/app/src/main/res/drawable/prediction_tools.xml
+++ b/app/src/main/res/drawable/prediction_tools.xml
@@ -1,132 +1,120 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="46dp"
+    android:width="46.336dp"
     android:height="46.333dp"
-    android:viewportWidth="46"
+    android:viewportWidth="46.336"
     android:viewportHeight="46.333">
   <path
-      android:pathData="M30.117,36.294v6.95L23.167,46.333v-6.95Z"
-      android:fillColor="#68607c"/>
+      android:pathData="M1,13a1.5,1 0,1 0,3 0a1.5,1 0,1 0,-3 0z"
+      android:fillColor="#fdf57a"/>
   <path
-      android:pathData="M23.167,39.383v6.95L16.217,43.244L16.217,36.294Z"
-      android:fillColor="#ed6571"/>
+      android:pathData="M45.612,2.894L45.612,6.514L41.992,6.514L41.992,2.894Z"
+      android:fillColor="#f14950"/>
   <path
-      android:pathData="M23.167,33.206l6.95,3.089 -6.95,3.089L16.217,36.295Z"
-      android:fillColor="#f69489"/>
+      android:pathData="M42.716,41.99h2.9v3.62L0.724,45.61L0.724,41.99L7.24,41.99l5.792,-5.068L18.824,36.922L20.996,34.75L29.684,34.75l3.62,3.62h5.792Z"
+      android:fillColor="#cc8964"/>
   <path
-      android:pathData="M22.394,26.256h1.544L23.938,36.295L22.394,36.295Z"
-      android:fillColor="#68607c"/>
+      android:pathData="M45.612,41.99v3.62L0.724,45.61L0.724,43.438L19.367,43.438a8.145,8.145 0,0 0,8.145 -8.145L27.512,34.75L29.684,34.75l3.62,3.62h5.792l3.62,3.62Z"
+      android:fillColor="#9a4738"/>
   <path
-      android:pathData="M22.394,12.356h1.544v4.633L22.394,16.989Z"
-      android:fillColor="#68607c"/>
+      android:pathData="M8.688,20.994s11.512,3.2 14.1,5.987C12.221,32.31 8.688,20.994 8.688,20.994Z"
+      android:fillColor="#879a39"/>
   <path
-      android:pathData="M13.354,23.713 L6.178,16.537L6.178,12.356h1.544v3.541l6.724,6.724Z"
-      android:fillColor="#68607c"/>
+      android:pathData="M11.584,0.722c2.853,2.136 11.316,12.692 11.577,13.025C22.806,13.616 11.584,9.272 11.584,0.722Z"
+      android:fillColor="#879a39"/>
   <path
-      android:pathData="M32.979,23.713l-1.092,-1.092 6.724,-6.724L38.611,12.356h1.544v4.181Z"
-      android:fillColor="#68607c"/>
+      android:pathData="M23.168,13.742c0.072,-0.442 1.643,-9.4 9.412,-9.4L23.168,13.754Z"
+      android:fillColor="#aac348"/>
   <path
-      android:pathData="M33.206,23.939L44.017,23.939v1.544L33.206,25.483Z"
-      android:fillColor="#68607c"/>
+      android:pathData="M8.688,20.993c7.964,-4.344 14.48,5.792 14.48,5.792 -0.123,0.065 -0.253,0.13 -0.376,0.2C20.2,24.193 8.688,20.993 8.688,20.993Z"
+      android:fillColor="#aac348"/>
   <path
-      android:pathData="M43.245,32.434L35.203,32.434l-5.632,-5.632 1.092,-1.092 5.179,5.179h7.4Z"
-      android:fillColor="#68607c"/>
+      android:pathData="M23.168,13.739v0.014l-0.007,-0.007C22.9,13.414 14.437,2.858 11.584,0.722c0,0 11.562,2.889 11.584,13Z"
+      android:fillColor="#aac348"/>
   <path
-      android:pathData="M2.317,23.939L12.356,23.939v1.544L2.317,25.483Z"
-      android:fillColor="#68607c"/>
+      android:pathData="M23.175,26.778c0.123,-0.362 4.482,-12.286 13.749,-11.577C34.071,19.48 23.508,26.561 23.175,26.778Z"
+      android:fillColor="#aac348"/>
   <path
-      android:pathData="M11.903,32.434L3.089,32.434L3.089,30.889h8.175l5.179,-5.179 1.092,1.092Z"
-      android:fillColor="#68607c"/>
+      android:pathData="M23.168,13.754 L32.58,4.342S31.132,13.754 23.168,13.754Z"
+      android:fillColor="#879a39"/>
   <path
-      android:pathData="M15.576,27.8a3.178,3.178 0,0 1,-3.2 -2.788c-0.008,-0.1 -0.015,-0.2 -0.015,-0.3a3.085,3.085 0,0 1,3.089 -3.089c0.039,0 0.077,0.008 0.116,0.008a2.78,2.78 0,0 1,1.012 -2.989,2.825 2.825,0 0,1 2.039,-0.88 3.048,3.048 0,0 1,1.653 0.533,3.068 3.068,0 0,1 5.807,0 3.048,3.048 0,0 1,1.653 -0.533,2.825 2.825,0 0,1 2.039,0.88 2.78,2.78 0,0 1,1.012 2.989c0.039,0 0.077,-0.008 0.116,-0.008a3.085,3.085 0,0 1,3.089 3.089c0,0.1 -0.008,0.2 -0.015,0.3a3.178,3.178 0,0 1,-3.2 2.788h-0.641v4.633a3.088,3.088 0,0 1,-3.089 -3.089L27.041,27.8Z"
-      android:fillColor="#ffd086"/>
+      android:pathData="M23.175,26.779c0.333,-0.217 10.9,-7.3 13.749,-11.577 0,0 -1.448,20.272 -13.756,11.584Z"
+      android:fillColor="#879a39"/>
   <path
-      android:pathData="M45.562,4.633v8.494L33.206,13.127L33.206,0h7.722Z"
-      android:fillColor="#91cbd7"/>
+      android:pathData="M31.927,17.624a4.493,4.493 0,0 0,-1.674 1.133c-0.316,0.342 0.2,0.855 0.512,0.512a3.68,3.68 0,0 1,1.355 -0.947C32.548,18.151 32.361,17.451 31.927,17.624Z"
+      android:fillColor="#fff"/>
   <path
-      android:pathData="M29.345,4.633v8.494L16.989,13.127L16.989,0h7.722Z"
-      android:fillColor="#91cbd7"/>
+      android:pathData="M29.413,19.455a0.362,0.362 0,0 0,0 0.724A0.362,0.362 0,0 0,29.413 19.455Z"
+      android:fillColor="#fff"/>
   <path
-      android:pathData="M13.128,4.633v8.494L0.772,13.127L0.772,0h7.722Z"
-      android:fillColor="#91cbd7"/>
+      android:pathData="M15,40m-1,0a1,1 0,1 1,2 0a1,1 0,1 1,-2 0"
+      android:fillColor="#cf735b"/>
   <path
-      android:pathData="M45.561,4.633L40.928,4.633L40.928,0Z"
-      android:fillColor="#4e9bb9"/>
+      android:pathData="M20,40a0.5,1 0,1 0,1 0a0.5,1 0,1 0,-1 0z"
+      android:fillColor="#cf735b"/>
   <path
-      android:pathData="M29.344,4.633L24.711,4.633L24.711,0Z"
-      android:fillColor="#4e9bb9"/>
+      android:pathData="M23,37.5a1,0.5 0,1 0,2 0a1,0.5 0,1 0,-2 0z"
+      android:fillColor="#cf735b"/>
   <path
-      android:pathData="M13.127,4.633L8.494,4.633L8.494,0Z"
-      android:fillColor="#4e9bb9"/>
+      android:pathData="M27,40m-1,0a1,1 0,1 1,2 0a1,1 0,1 1,-2 0"
+      android:fillColor="#cf735b"/>
   <path
-      android:pathData="M42,24.5a2,2.5 0,1 0,4 0a2,2.5 0,1 0,-4 0z"
-      android:fillColor="#91cbd7"/>
+      android:pathData="M31,40m-1,0a1,1 0,1 1,2 0a1,1 0,1 1,-2 0"
+      android:fillColor="#cf735b"/>
   <path
-      android:pathData="M42,31.5a2,2.5 0,1 0,4 0a2,2.5 0,1 0,-4 0z"
-      android:fillColor="#91cbd7"/>
+      android:fillColor="#FF000000"
+      android:pathData="M0,26a0.5,1 0,1 0,1 0a0.5,1 0,1 0,-1 0z"/>
   <path
-      android:pathData="M2.5,24.5m-2.5,0a2.5,2.5 0,1 1,5 0a2.5,2.5 0,1 1,-5 0"
-      android:fillColor="#91cbd7"/>
+      android:fillColor="#FF000000"
+      android:pathData="M0.5,33.5m-0.5,0a0.5,0.5 0,1 1,1 0a0.5,0.5 0,1 1,-1 0"/>
   <path
-      android:pathData="M2.5,31.5m-2.5,0a2.5,2.5 0,1 1,5 0a2.5,2.5 0,1 1,-5 0"
-      android:fillColor="#91cbd7"/>
+      android:fillColor="#FF000000"
+      android:pathData="M45,29a0.5,1 0,1 0,1 0a0.5,1 0,1 0,-1 0z"/>
   <path
-      android:pathData="M3.089,6.178h7.722v1.544L3.089,7.722Z"
-      android:fillColor="#68607c"/>
+      android:fillColor="#FF000000"
+      android:pathData="M45.612,41.266h-2.6l-3.408,-3.408a0.722,0.722 0,0 0,-0.512 -0.212L33.6,37.646L30.2,34.238a0.722,0.722 0,0 0,-0.512 -0.212L23.892,34.026L23.892,28.114a9.578,9.578 0,0 0,4.833 1.561,5.868 5.868,0 0,0 2.542,-0.567c5.515,-2.613 6.347,-13.4 6.38,-13.855a0.79,0.79 0,0 0,-0.012 -0.093,0.549 0.549,0 0,0 -0.071,-0.273 0.674,0.674 0,0 0,-0.067 -0.117,0.734 0.734,0 0,0 -0.106,-0.106 0.781,0.781 0,0 0,-0.064 -0.065c-0.012,-0.008 -0.025,-0.008 -0.037,-0.015a0.7,0.7 0,0 0,-0.133 -0.054,0.747 0.747,0 0,0 -0.14,-0.04c-0.013,0 -0.023,-0.009 -0.037,-0.01 -6.829,-0.523 -11.069,5.236 -13.088,8.987L23.892,14.451c7.855,-0.546 9.389,-9.9 9.4,-10 0,-0.017 0,-0.033 0,-0.05a0.731,0.731 0,0 0,-0.011 -0.177,0.724 0.724,0 0,0 -0.022,-0.113 0.71,0.71 0,0 0,-0.084 -0.156,0.6 0.6,0 0,0 -0.046,-0.085c-0.006,-0.007 -0.015,-0.009 -0.022,-0.016s-0.009,-0.017 -0.016,-0.024a0.706,0.706 0,0 0,-0.134 -0.089,0.684 0.684,0 0,0 -0.091,-0.06 0.712,0.712 0,0 0,-0.287 -0.064c-4.712,0 -7.307,3.06 -8.688,5.8v-2.9a0.724,0.724 0,1 0,-1.448 0L22.443,7.867a13.29,13.29 0,0 0,-2.387 -3.162,0.724 0.724,0 1,0 -1.017,1.03A11.039,11.039 0,0 1,22.2 11.41c-1.848,-2.26 -5,-6.046 -7.491,-8.694a18.567,18.567 0,0 1,2.257 1.318,0.724 0.724,0 0,0 0.82,-1.194A20.561,20.561 0,0 0,11.76 0.019h0a0.723,0.723 0,0 0,-0.3 -0.005,0.638 0.638,0 0,0 -0.091,0.032 0.7,0.7 0,0 0,-0.188 0.087c-0.012,0.009 -0.028,0.009 -0.041,0.019s-0.031,0.043 -0.05,0.062A0.631,0.631 0,0 0,11 0.288c-0.016,0.022 -0.02,0.047 -0.033,0.07a0.694,0.694 0,0 0,-0.054 0.112,0.714 0.714,0 0,0 -0.043,0.184c0,0.024 -0.015,0.045 -0.015,0.069 0,8.167 9.337,12.578 11.584,13.521v10.4c-1.539,-1.817 -4.309,-4.487 -7.81,-5.246a0.724,0.724 0,0 0,-0.307 1.415A12.688,12.688 0,0 1,20.34 24.497a63.649,63.649 0,0 0,-9.434 -3.6,7.418 7.418,0 0,1 0.785,-0.177 0.724,0.724 0,1 0,-0.214 -1.433A9.48,9.48 0,0 0,8.34 20.358l-0.006,0c-0.012,0.007 -0.019,0.017 -0.03,0.024a0.729,0.729 0,0 0,-0.172 0.146,0.7 0.7,0 0,0 -0.041,0.067 0.72,0.72 0,0 0,-0.085 0.168c0,0.012 -0.013,0.02 -0.017,0.032a0.613,0.613 0,0 0,0 0.064,0.724 0.724,0 0,0 -0.012,0.168 0.684,0.684 0,0 0,0.014 0.109c0.005,0.023 0,0.046 0.009,0.069 0.07,0.222 1.748,5.446 6.255,7.294a8.462,8.462 0,0 0,3.239 0.63,12.063 12.063,0 0,0 4.952,-1.189v6.8a0.724,0.724 0,0 0,0.724 0.724h6.216l3.408,3.408a0.725,0.725 0,0 0,0.513 0.212L38.8,39.084l2.172,2.172L39.82,41.256a0.724,0.724 0,1 0,0 1.448h5.068v2.172L1.448,44.876L1.448,42.714L11.584,42.714a0.724,0.724 0,1 0,0 -1.448L0.724,41.266A0.724,0.724 0,0 0,0 41.99v3.62a0.724,0.724 0,0 0,0.724 0.724L45.612,46.334a0.724,0.724 0,0 0,0.724 -0.724v-3.62A0.724,0.724 0,0 0,45.612 41.266ZM30.645,27.797c-1.693,0.8 -3.768,0.445 -6.168,-1.029 2.251,-1.549 8.084,-5.688 11.4,-9.175C35.333,20.813 33.943,26.239 30.645,27.797ZM35.445,15.918c-2.546,2.939 -7.661,6.738 -10.558,8.789C26.5,21.58 29.989,16.337 35.45,15.922ZM25.166,12.78 L31.1,6.844C30.241,9.035 28.5,11.93 25.166,12.78ZM30.582,5.316 L24.646,11.252C25.507,9.061 27.251,6.166 30.582,5.316ZM12.508,2.521c2.287,2.262 5.817,6.46 8.04,9.161C17.634,10.04 13.44,6.96 12.508,2.521ZM14.808,27.167a10.133,10.133 0,0 1,-4.874 -5.06c4,1.2 9.234,3.09 11.52,4.682A8.534,8.534 0,0 1,14.81 27.167Z"/>
   <path
-      android:pathData="M3.089,9.267h7.722v1.544L3.089,10.811Z"
-      android:fillColor="#68607c"/>
+      android:fillColor="#FF000000"
+      android:pathData="M7.964,25.338L3.62,25.338a0.724,0.724 0,1 0,0 1.448L7.964,26.786a0.724,0.724 0,0 0,0 -1.448Z"/>
   <path
-      android:pathData="M3.089,3.089L6.95,3.089L6.95,4.633L3.089,4.633Z"
-      android:fillColor="#68607c"/>
+      android:fillColor="#FF000000"
+      android:pathData="M13.544,32.79A0.722,0.722 0,0 0,13.032 32.578L3.62,32.578a0.724,0.724 0,0 0,0 1.448h9.112l1.236,1.236A0.724,0.724 0,1 0,14.996 34.238Z"/>
   <path
-      android:pathData="M19.306,6.178h7.722v1.544L19.306,7.722Z"
-      android:fillColor="#68607c"/>
+      android:fillColor="#FF000000"
+      android:pathData="M36.2,26.062a0.724,0.724 0,1 0,0 1.448L38.076,27.51l1.96,1.96a0.722,0.722 0,0 0,0.512 0.212L42.716,29.682a0.724,0.724 0,0 0,0 -1.448L40.844,28.234l-1.96,-1.96A0.722,0.722 0,0 0,38.376 26.062Z"/>
   <path
-      android:pathData="M19.306,9.267h7.722v1.544L19.306,10.811Z"
-      android:fillColor="#68607c"/>
+      android:fillColor="#FF000000"
+      android:pathData="M21.508,34.238a0.723,0.723 0,0 0,-1.024 0l-1.96,1.96L13.032,36.198a0.725,0.725 0,0 0,-0.477 0.18l-3.62,3.167a0.724,0.724 0,1 0,0.954 1.089l3.416,-2.988h5.52a0.722,0.722 0,0 0,0.512 -0.212l2.172,-2.172A0.723,0.723 0,0 0,21.508 34.238Z"/>
   <path
-      android:pathData="M19.306,3.089h3.861L23.167,4.633L19.306,4.633Z"
-      android:fillColor="#68607c"/>
+      android:fillColor="#FF000000"
+      android:pathData="M17.376,41.266a0.724,0.724 0,1 0,0 1.448h3.62a0.724,0.724 0,1 0,0 -1.448Z"/>
   <path
-      android:pathData="M35.522,6.178h7.722v1.544L35.522,7.722Z"
-      android:fillColor="#68607c"/>
+      android:fillColor="#FF000000"
+      android:pathData="M35.476,42.714a0.724,0.724 0,0 0,0 -1.448L25.34,41.266a0.724,0.724 0,1 0,0 1.448Z"/>
   <path
-      android:pathData="M35.522,9.267h7.722v1.544L35.522,10.811Z"
-      android:fillColor="#68607c"/>
+      android:fillColor="#FF000000"
+      android:pathData="M45.612,2.17h-3.62a0.724,0.724 0,0 0,-0.724 0.724L41.268,4.342L39.82,4.342A0.722,0.722 0,0 0,39.304 4.554L35.904,7.962L34.028,7.962a0.724,0.724 0,1 0,0 1.448L36.204,9.41a0.722,0.722 0,0 0,0.512 -0.212L40.12,5.79h1.148v0.724a0.724,0.724 0,0 0,0.724 0.724h3.62a0.724,0.724 0,0 0,0.724 -0.724L46.336,2.894A0.724,0.724 0,0 0,45.612 2.17ZM44.888,5.79L42.716,5.79L42.716,3.618h2.172Z"/>
   <path
-      android:pathData="M35.522,3.089h3.861L39.383,4.633L35.522,4.633Z"
-      android:fillColor="#68607c"/>
+      android:fillColor="#FF000000"
+      android:pathData="M45.612,10.134L39.096,10.134a0.724,0.724 0,1 0,0 1.448L45.612,11.582a0.724,0.724 0,0 0,0 -1.448Z"/>
   <path
-      android:pathData="M22.394,20.078h1.544v7.722L22.394,27.8Z"
-      android:fillColor="#f69489"/>
+      android:fillColor="#FF000000"
+      android:pathData="M39.096,14.478h5.068a0.724,0.724 0,1 0,0 -1.448L39.096,13.03a0.724,0.724 0,1 0,0 1.448Z"/>
   <path
-      android:pathData="M20.85,27.8L19.305,27.8v-2L17.761,24.258L17.761,21.622h1.544v2l1.544,1.544Z"
-      android:fillColor="#f69489"/>
+      android:fillColor="#FF000000"
+      android:pathData="M39.096,17.374h3.62a0.724,0.724 0,0 0,0 -1.448h-3.62a0.724,0.724 0,1 0,0 1.448Z"/>
   <path
-      android:pathData="M27.027,27.8L25.483,27.8L25.483,25.163L27.027,23.622L27.027,21.622h1.544v2.636l-1.544,1.544Z"
-      android:fillColor="#f69489"/>
+      android:fillColor="#FF000000"
+      android:pathData="M0.724,18.098L5.792,18.098a0.724,0.724 0,1 0,0 -1.448L0.724,16.65a0.724,0.724 0,0 0,0 1.448Z"/>
   <path
-      android:pathData="M33.206,38.611h1.544v1.544L33.206,40.155Z"
-      android:fillColor="#68607c"/>
+      android:fillColor="#FF000000"
+      android:pathData="M0.724,20.994h3.62a0.724,0.724 0,0 0,0 -1.448L0.724,19.546a0.724,0.724 0,0 0,0 1.448Z"/>
   <path
-      android:pathData="M36.294,38.611h1.544v1.544L36.294,40.155Z"
-      android:fillColor="#68607c"/>
+      android:fillColor="#FF000000"
+      android:pathData="M2.172,15.202a2.169,2.169 0,0 0,2.039 -1.448L14.18,13.754l6.3,6.3a0.724,0.724 0,0 0,1.024 -1.024l-6.516,-6.516a0.722,0.722 0,0 0,-0.512 -0.212L8.688,12.302L8.688,7.962a0.722,0.722 0,0 0,-0.212 -0.512L3.408,2.382A0.724,0.724 0,0 0,2.384 3.406L7.24,8.262v4.044L4.211,12.306a2.168,2.168 0,1 0,-2.039 2.9ZM2.172,12.302a0.724,0.724 0,1 1,-0.724 0.724A0.725,0.725 0,0 1,2.172 12.306Z"/>
   <path
-      android:pathData="M36.294,41.7h1.544v1.544L36.294,43.244Z"
-      android:fillColor="#68607c"/>
+      android:pathData="M29.669,25.442c0.213,-0.161 0.421,-0.332 0.614,-0.509a0.725,0.725 0,0 1,1.222 0.62,1.476 1.476,0 0,1 -1.155,1.145A0.726,0.726 0,0 1,29.669 25.442Z"
+      android:fillColor="#65732b"/>
   <path
-      android:pathData="M36.294,35.522h1.544v1.544L36.294,37.066Z"
-      android:fillColor="#68607c"/>
-  <path
-      android:pathData="M11.583,38.611h1.544v1.544L11.583,40.155Z"
-      android:fillColor="#68607c"/>
-  <path
-      android:pathData="M8.494,38.611h1.544v1.544L8.494,40.155Z"
-      android:fillColor="#68607c"/>
-  <path
-      android:pathData="M8.494,41.7h1.544v1.544L8.494,43.244Z"
-      android:fillColor="#68607c"/>
-  <path
-      android:pathData="M8.494,35.522h1.544v1.544L8.494,37.066Z"
-      android:fillColor="#68607c"/>
+      android:pathData="M31.856,23.166 L34.756,19.546S34.028,23.89 31.856,23.166Z"
+      android:fillColor="#65732b"/>
 </vector>
