--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -88,7 +88,7 @@
                     android:paddingLeft="@dimen/dimen_20dp"
                     android:paddingRight="@dimen/dimen_20dp"
                     android:paddingBottom="@dimen/dimen_30dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical" >
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -556,7 +556,6 @@
                                     android:layout_marginLeft="@dimen/dimen_10dp"
                                     android:layout_weight="1"
                                     android:layout_marginRight="@dimen/dimen_10dp"
-                                    android:onClick="openCalculators"
                                     android:orientation="vertical"
                                     android:layout_gravity="center"
                                     android:background="@drawable/background_round_white">
@@ -579,7 +578,7 @@
                                         android:gravity="center"
                                         android:paddingBottom="5dp"
                                         android:layout_marginTop="-5dp"
-                                        android:text="Prediction Tools"
+                                        android:text="@string/title_predictiontools"
                                         android:textAllCaps="true"
                                         android:textColor="#000"
                                         android:textSize="14sp"
